reparado busqueda y listo para empezar seguridad